# kartesio

./: CMakeLists.txt  Messages.sh  README.md  application.qrc  build.sh  calculations.cpp  calculations.h  kartesio.desktop  kartesio.pro  list-libraries.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parabola.kartesio
cmake-mod/: Findzorbaneural.cmake
debian/: README.source  changelog  control  copyright  files  init.d.ex  kartesio.cron.d.ex  kartesio.default.ex  kartesio.doc-base.EX  kartesio.substvars  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
debian/kartesio/DEBIAN/: control  md5sums
debian/kartesio/usr/share/doc/kartesio/: README.Debian
doc/: CMakeLists.txt  index.docbook  man-kartesio.1.docbook
icons/: CMakeLists.txt
kartesio/: CMakeLists.txt  calculations.h  kartesio.desktop  kartesio.kdev4  kartesio.pro  kartesioui.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
kartesio/src/: kartesio.desktop
libzorbaneural/: libzorbaneural.pro  main.cpp  neuralnet.cpp  neuralnet.h  neuralnet_global.h  zorbaneural-dev.sh
src/: CMakeLists.txt  calculations.cpp  calculations.h  kartesio.desktop  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
