kde4_install_icons(${ICON_INSTALL_DIR})

#install(FILES hi16-app-kartesio.png DESTINATION  ${PREFIX}/share/icons/hicolor/16/apps/kartesio.png)
#install(FILES hi32-app-kartesio.png DESTINATION  ${PREFIX}/share/icons/hicolor/32/apps/kartesio.png)
#install(FILES hi64-app-kartesio.png DESTINATION  ${PREFIX}/share/icons/hicolor/64/apps/kartesio.png)
#install(FILES hi128-app-kartesio.png DESTINATION  ${PREFIX}/share/icons/hicolor/128/apps/kartesio.png)
#install(FILES hi256-app-kartesio.png DESTINATION  ${PREFIX}/share/icons/hicolor/256/apps/kartesio.png)
